Fix Dockerfile base image reference

--- a/Dockerfile.mcp
+++ b/Dockerfile.mcp
@@ -1,4 +1,4 @@
-FROM python:3.12-slim@sha256:8efd3ea2cd128ae3161d3d7ced730227f4a358d6f2c0160b1812a061c15de1fc
+FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
