--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,16 @@ email = "nolleh7707@gmail.com"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/mcp_vertica"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "src/mcp_vertica",
+    "pyproject.toml",
+    "uv.lock",
+    "README.md",
+]
+
 [project.scripts]
 mcp-vertica = "mcp_vertica:cli"
