--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,6 +44,7 @@ jobs:
       id-token: write
     env:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      MCP_IMAGE_REPO: ${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}
     steps:
       - uses: actions/checkout@v4
       - name: Determine AWS auth method
@@ -74,17 +75,21 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
+      - name: Ensure MCP ECR repository exists
+        run: |
+          aws ecr describe-repositories --repository-names "$MCP_IMAGE_REPO" >/dev/null 2>&1 || \
+            aws ecr create-repository --repository-name "$MCP_IMAGE_REPO"
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
       - name: Build MCP image
         run: |
-          docker build -f Dockerfile.mcp -t $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}:${{ github.sha }} .
-          docker tag $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}:${{ github.sha }} \
-            $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}:latest
+          docker build -f Dockerfile.mcp -t $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$MCP_IMAGE_REPO:${{ github.sha }} .
+          docker tag $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$MCP_IMAGE_REPO:${{ github.sha }} \
+            $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$MCP_IMAGE_REPO:latest
       - name: Push MCP image
         run: |
-          docker push $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}:${{ github.sha }}
-          docker push $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ vars.MCP_IMAGE_REPO || 'mcp-vertica' }}:latest
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$MCP_IMAGE_REPO:${{ github.sha }}
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/$MCP_IMAGE_REPO:latest
 
   deploy:
     needs: build
