--- a/Dockerfile.mcp
+++ b/Dockerfile.mcp
@@ -1,31 +1,22 @@
+# syntax=docker/dockerfile:1.7
 FROM python:3.12-slim
 
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
-
-RUN apt-get update \ 
-    && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        curl \
-        build-essential \ 
-        jq \ 
-    && rm -rf /var/lib/apt/lists/*
-
+ARG APP_USER=app
+RUN useradd -m ${APP_USER}
 WORKDIR /app
 
-COPY pyproject.toml uv.lock /app/
-RUN pip install --no-cache-dir uv \ 
-    && uv sync --frozen --no-editable
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ca-certificates curl build-essential && rm -rf /var/lib/apt/lists/*
 
-COPY src /app/src
-COPY sql /app/sql
+RUN pip install --no-cache-dir uv
+COPY pyproject.toml uv.lock ./
+RUN uv pip install --system --frozen --no-deps -e .
 
-RUN useradd --create-home app && chown -R app:app /app
-USER app
+COPY src ./src
+COPY sql ./sql
 
-ENV PYTHONPATH=/app/src:/app
+ENV PYTHONUNBUFFERED=1
 EXPOSE 8000
+USER ${APP_USER}
 
-HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=10 CMD curl -fsS http://127.0.0.1:8000/healthz || exit 1
-
-CMD ["python", "-m", "mcp_vertica", "--transport", "http", "--port", "8000"]
+ENTRYPOINT ["python", "-m", "mcp_vertica", "--transport", "http", "--port", "8000"]
