--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,30 @@
 version: "3.9"
 services:
-  vertica-ce:
-    image: 957650740525.dkr.ecr.ap-south-1.amazonaws.com/vertica-ce:v1.0
-    container_name: vertica-ce
-    ports:
-      - "5433:5433"
+  vertica:
+    image: ${VERTICA_IMAGE_URI:-957650740525.dkr.ecr.ap-south-1.amazonaws.com/vertica-ce:v1.0}
+    container_name: vertica_ce
+    ports: ["5433:5433"]
+    volumes: ["vertica_data:/data"]
+    ulimits:
+      nofile: 65536
     restart: unless-stopped
-    volumes:
-      - ./_data/vertica:/data
-  mcp-vertica:
+  mcp:
     build:
       context: .
       dockerfile: Dockerfile.mcp
-    container_name: mcp-vertica
+    container_name: mcp_vertica
     environment:
-      VERTICA_HOST: vertica-ce
+      VERTICA_HOST: vertica
       VERTICA_PORT: "5433"
-      VERTICA_DATABASE: VMart
-      VERTICA_USER: dbadmin
-      VERTICA_PASSWORD: ""
-      VERTICA_CONNECTION_LIMIT: "5"
-      MCP_MAX_CONCURRENT_QUERIES: "4"
-      # MCP_HTTP_TOKEN: "set-me-for-remote"
-      # ALLOWED_ORIGINS: "https://smithery.ai,https://app.anthropic.com"
-    ports:
-      - "8000:8000"
-    depends_on:
-      - vertica-ce
+      VERTICA_DATABASE: ${VERTICA_DATABASE:-vmart}
+      VERTICA_USER: ${VERTICA_USER:-dbadmin}
+      VERTICA_PASSWORD: ${VERTICA_PASSWORD:-password}
+      VERTICA_SSL: "false"
+      VERTICA_SSL_REJECT_UNAUTHORIZED: "false"
+      VERTICA_CONNECTION_LIMIT: "8"
+      VERTICA_SCHEMA: ${VERTICA_SCHEMA:-mf_shared_provider_default}
+    ports: ["8000:8000"]
+    depends_on: [vertica]
     restart: unless-stopped
 volumes:
-  vertica:
-    driver: local
+  vertica_data: {}
