--- a/Dockerfile.mcp
+++ b/Dockerfile.mcp
@@ -10,7 +10,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 RUN pip install --no-cache-dir uv
 COPY pyproject.toml uv.lock ./
-RUN uv pip install --system --frozen --no-deps -e .
+RUN uv pip sync --system uv.lock && \
+    uv pip install --system --no-deps -e .
 
 COPY src ./src
 COPY sql ./sql
