--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,6 +100,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: terraform-outputs
+          path: infra
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
       - name: Read outputs
