--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       VERTICA_HOST: vertica
       VERTICA_PORT: "5433"
-      VERTICA_DATABASE: ${VERTICA_DATABASE:-vmart}
+      VERTICA_DATABASE: ${VERTICA_DATABASE:-VMart}
       VERTICA_USER: ${VERTICA_USER:-dbadmin}
       VERTICA_PASSWORD: ${VERTICA_PASSWORD:-password}
       VERTICA_SSL: "false"
