--- a/Dockerfile.mcp
+++ b/Dockerfile.mcp
@@ -1,24 +1,23 @@
-# syntax=docker/dockerfile:1.7
 FROM python:3.12-slim
 
-ARG APP_USER=app
-RUN useradd -m ${APP_USER}
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential curl \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
+COPY pyproject.toml /app/
+RUN pip install -U pip && pip install "uv>=0.4.0" \
+    && uv pip compile pyproject.toml --no-strip-extras --output-file requirements.txt \
+    && uv pip install -r requirements.txt
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates curl build-essential && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --no-cache-dir uv
-COPY pyproject.toml uv.lock ./
-RUN uv export --no-dev --frozen --format requirements.txt --output-file requirements.lock && \
-    uv pip sync --system requirements.lock
-
-COPY src ./src
-COPY sql ./sql
-RUN uv pip install --system --no-deps -e .
-
-ENV PYTHONUNBUFFERED=1
+COPY src /app/src
+COPY sql /app/sql
+ENV PYTHONPATH=/app/src
 EXPOSE 8000
-USER ${APP_USER}
-
-ENTRYPOINT ["python", "-m", "mcp_vertica", "--transport", "http", "--port", "8000"]
+ENV MCP_HTTP_TOKEN=""
+CMD ["python", "-m", "mcp_vertica.server", "--transport", "http", "--host", "0.0.0.0", "--port", "8000"]
