--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,20 @@
-version: "3.9"
 services:
   vertica:
-    image: ${VERTICA_IMAGE_URI:-957650740525.dkr.ecr.ap-south-1.amazonaws.com/vertica-ce:v1.0}
-    container_name: vertica_ce
-    ports: ["5433:5433"]
-    volumes: ["vertica_data:/data"]
-    ulimits:
-      nofile: 65536
-    restart: unless-stopped
+    image: ${VERTICA_IMAGE_URI}
+    ports:
+      - "5433:5433"
   mcp:
     build:
       context: .
       dockerfile: Dockerfile.mcp
-    container_name: mcp_vertica
     environment:
       VERTICA_HOST: vertica
       VERTICA_PORT: "5433"
-      VERTICA_DATABASE: ${VERTICA_DATABASE:-VMart}
-      VERTICA_USER: ${VERTICA_USER:-dbadmin}
-      VERTICA_PASSWORD: ${VERTICA_PASSWORD:-password}
-      VERTICA_SSL: "false"
-      VERTICA_SSL_REJECT_UNAUTHORIZED: "false"
-      VERTICA_CONNECTION_LIMIT: "8"
-      VERTICA_SCHEMA: ${VERTICA_SCHEMA:-mf_shared_provider_default}
-    ports: ["8000:8000"]
-    depends_on: [vertica]
-    restart: unless-stopped
-volumes:
-  vertica_data: {}
+      VERTICA_USER: ${VERTICA_USER}
+      VERTICA_PASSWORD: ${VERTICA_PASSWORD}
+      VERTICA_DATABASE: ${VERTICA_DATABASE}
+      MCP_HTTP_TOKEN: ${MCP_HTTP_TOKEN}
+    ports:
+      - "8000:8000"
+    depends_on:
+      - vertica
