--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,17 @@
 [project]
 name = "mcp-vertica"
-version = "0.2.0"
-description = "Vertica MCP using Fast MCP"
+version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-    "vertica-python>=1.0.0",
-    "click>=8.1",
-    "python-dotenv>=1.0",
-    "mcp[cli]",
-    "starlette>=0.37",
-    "uvicorn[standard]>=0.29",
-    "sqlparse>=0.5.3",
-    "pytest>=8.3",
-    "ruff>=0.6",
-]
-
-[[project.authors]]
-name = "nolleh"
-email = "nolleh7707@gmail.com"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/mcp_vertica"]
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "src/mcp_vertica",
-    "pyproject.toml",
-    "uv.lock",
-    "README.md",
+  "mcp>=1.8.0",
+  "fastapi>=0.114.0",
+  "uvicorn>=0.30.0",
+  "vertica-python>=1.4.0",
+  "jinja2>=3.1.4",
+  "pydantic>=2.6.0",
+  "tenacity>=9.0.0",
+  "pytest>=8.0.0"
 ]
 
 [project.scripts]
-mcp-vertica = "mcp_vertica:cli"
+mcp-vertica = "mcp_vertica.server:main"
